Fixed video element css overlapping

--- a/src/components/Media/Media.css
+++ b/src/components/Media/Media.css
@@ -1,6 +1,13 @@
+.camera-container {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 .camera-container video {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: auto;
 }
 
 .powerOn {
